--- a/index.html
+++ b/index.html
@@ -17,25 +17,27 @@
 
   <body>
     <header class="page-header">
-      <div class="container header-menu">
-        <!-- navigation menu -->
-        <nav class="nav-menu">
-          <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="item"><a class="link current" href="./index.html">Студія</a></li>
-            <li class="item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
-            <li class="item"><a class="link" href="#">Контакти</a></li>
+      <div class="container">
+        <div class="header-menu">
+          <!-- navigation menu -->
+          <nav class="nav-menu">
+            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <ul class="site-nav list">
+              <li class="item"><a class="link current" href="./index.html">Студія</a></li>
+              <li class="item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+              <li class="item"><a class="link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <!-- header contacts -->
+          <ul class="head-contact list">
+            <li class="item">
+              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a class="link" href="tel:00380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
-        </nav>
-        <!-- header contacts -->
-        <ul class="head-contact list">
-          <li class="item">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a class="link" href="tel:00380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
@@ -53,25 +55,25 @@
         <div class="container">
           <h2 class="visually-hidden section-title">Наші переваги</h2>
           <ul class="features-list list">
-            <li>
+            <li class="features-item">
               <h3 class="title">Увага до деталей</h3>
               <p class="list-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="title">Пунктуальність</h3>
               <p class="list-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="title">Планування</h3>
               <p class="list-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="title">Сучасні технології</h3>
               <p class="list-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -105,17 +107,42 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-member">
-              <img src="./images/team1.jpg" alt="Світловолоса жінка в окулярах" width="270" />
+              <img
+                class="member-img"
+                src="./images/team4.jpg"
+                alt="Чоловік в окулярах з бородою"
+                width="270"
+              />
+              <h3 class="title">Ігор Дем'яненко</h3>
+              <p class="list-text">Product Designer</p>
+            </li>
+            <li class="team-member">
+              <img
+                class="member-img"
+                src="./images/team1.jpg"
+                alt="Світловолоса жінка в окулярах"
+                width="270"
+              />
               <h3 class="title">Ольга Рєпіна</h3>
               <p class="list-text">Frontend Developer</p>
             </li>
             <li class="team-member">
-              <img src="./images/team2.jpg" alt="Усміхнений чоловік в сорочці" width="270" />
+              <img
+                class="member-img"
+                src="./images/team2.jpg"
+                alt="Усміхнений чоловік в сорочці"
+                width="270"
+              />
               <h3 class="title">Микола Тарасов</h3>
               <p class="list-text">Marketing</p>
             </li>
             <li class="team-member">
-              <img src="./images/team3.jpg" alt="Чоловік в окулярах" width="270" />
+              <img
+                class="member-img"
+                src="./images/team3.jpg"
+                alt="Чоловік в окулярах"
+                width="270"
+              />
               <h3 class="title">Михайло Єрмаков</h3>
               <p class="list-text">UI Designer</p>
             </li>
@@ -127,26 +154,32 @@
     <!-- page footer -->
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-        <address>
-          <ul class="list">
-            <li>
-              <a
-                class="address link"
-                href="https://goo.gl/maps/J4j9FRFDDXwHHrxk6"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li>
-              <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a class="contact link" href="tel:00380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="footer-container">
+          <div class="logo-footer">
+            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+          </div>
+          <div class="address-content">
+            <address>
+              <ul class="list">
+                <li>
+                  <a
+                    class="address link"
+                    href="https://goo.gl/maps/J4j9FRFDDXwHHrxk6"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li>
+                  <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                  <a class="contact link" href="tel:00380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
