--- a/portfolio.html
+++ b/portfolio.html
@@ -16,144 +16,195 @@
   </head>
   <body>
     <header class="page-header">
-      <!-- navigation menu -->
-      <nav>
-        <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-        <ul class="site-nav list">
-          <li><a class="link" href="./index.html">Студія</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="link" href="#">Контакти</a></li>
+      <div class="container header-menu">
+        <!-- navigation menu -->
+        <nav class="nav-menu">
+          <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+          <ul class="site-nav list">
+            <li class="item"><a class="link current" href="./index.html">Студія</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <!-- header contacts -->
+        <ul class="head-contact list">
+          <li class="item">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a class="link" href="tel:00380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <!-- header contacts -->
-      <ul class="head-contact list">
-        <li>
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link" href="tel:00380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <h1 class="visually-hidden">Portfolio Filter Buttons</h1>
-        <ul class="list">
-          <li>
-            <button class="filter" type="button">Усі</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Веб-сайти</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Додатки</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <h1 class="visually-hidden">Portfolio cards</h1>
-        <ul class="list">
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/technokryak.jpg" alt="Сторінка Технокряк на макбук" width="370" />
-              <h2 class="title">Технокряк</h2>
-              <h3 class="category">Вебсайт</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img
-                src="./images/poster-new-orlean-golden-star.jpg"
-                alt="Постер баскетбол Нью Орлеан та Голден Стар"
-                width="370"
-              />
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <h3 class="category">Дизайн</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/seafood-restaurant.jpg" alt="Сіфуд ресторан лого" width="370" />
-              <h2 class="title">Ресторан Seafood</h2>
-              <h3 class="category">Додаток</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/project-prime.jpg" alt="Навушники" width="370" />
-              <h2 class="title">Проєкт Prime</h2>
-              <h3 class="category">Маркетинг</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/project-boxes.jpg" alt="Дві коробки" width="370" />
-              <h2 class="title">Проєкт Boxes</h2>
-              <h3 class="category">Додаток</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img
-                src="./images/inspiration-no-borders.jpg"
-                alt="Сторінка Інспірейшн на моніторі"
-                width="370"
-              />
-              <h2 class="title">Inspiration has no Borders</h2>
-              <h3 class="category">Веб-сайт</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/limited-edition.jpg" alt="Відкритий журнал моди" width="370" />
-              <h2 class="title">Видання Limited Edition</h2>
-              <h3 class="category">Дизайн</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/project-lab.jpg" alt="Лєйбла" width="370" />
-              <h2 class="title">Проєкт LAB</h2>
-              <h3 class="category">Маркетинг</h3>
-            </a>
-          </li>
-          <li class="cards">
-            <a class="link" href="#">
-              <img src="./images/growing-business.jpg" alt="Робота на ноутбукі" width="370" />
-              <h2 class="title">Growing Business</h2>
-              <h3 class="category">Додаток</h3>
-            </a>
-          </li>
-        </ul>
+      <section class="section portfolio">
+        <div class="container">
+          <div class="portfolio-container">
+            <h1 class="visually-hidden">Portfolio Filter Buttons</h1>
+            <ul class="list filter-menu">
+              <li>
+                <button class="filter" type="button">Усі</button>
+              </li>
+              <li>
+                <button class="filter" type="button">Веб-сайти</button>
+              </li>
+              <li>
+                <button class="filter" type="button">Додатки</button>
+              </li>
+              <li>
+                <button class="filter" type="button">Дизайн</button>
+              </li>
+              <li>
+                <button class="filter" type="button">Маркетинг</button>
+              </li>
+            </ul>
+            <h1 class="visually-hidden">Portfolio cards</h1>
+            <ul class="list portfolio">
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/technokryak.jpg"
+                    alt="Сторінка Технокряк на макбук"
+                    width="370"
+                  />
+                  <h2 class="title">Технокряк</h2>
+                  <h3 class="category">Вебсайт</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/poster-new-orlean-golden-star.jpg"
+                    alt="Постер баскетбол Нью Орлеан та Голден Стар"
+                    width="370"
+                  />
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <h3 class="category">Дизайн</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/seafood-restaurant.jpg"
+                    alt="Сіфуд ресторан лого"
+                    width="370"
+                  />
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <h3 class="category">Додаток</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/project-prime.jpg"
+                    alt="Навушники"
+                    width="370"
+                  />
+                  <h2 class="title">Проєкт Prime</h2>
+                  <h3 class="category">Маркетинг</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/project-boxes.jpg"
+                    alt="Дві коробки"
+                    width="370"
+                  />
+                  <h2 class="title">Проєкт Boxes</h2>
+                  <h3 class="category">Додаток</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/inspiration-no-borders.jpg"
+                    alt="Сторінка Інспірейшн на моніторі"
+                    width="370"
+                  />
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <h3 class="category">Веб-сайт</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/limited-edition.jpg"
+                    alt="Відкритий журнал моди"
+                    width="370"
+                  />
+                  <h2 class="title">Видання Limited Edition</h2>
+                  <h3 class="category">Дизайн</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/project-lab.jpg"
+                    alt="Лєйбла"
+                    width="370"
+                  />
+                  <h2 class="title">Проєкт LAB</h2>
+                  <h3 class="category">Маркетинг</h3>
+                </a>
+              </li>
+              <li class="cards">
+                <a class="link" href="#">
+                  <img
+                    class="portfolio-img"
+                    src="./images/growing-business.jpg"
+                    alt="Робота на ноутбукі"
+                    width="370"
+                  />
+                  <h2 class="title">Growing Business</h2>
+                  <h3 class="category">Додаток</h3>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
     <!-- page footer -->
     <footer class="footer">
-      <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="address link"
-              href="https://goo.gl/maps/J4j9FRFDDXwHHrxk6"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a class="contact link" href="tel:00380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <div class="footer-container">
+          <div class="logo-footer">
+            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+          </div>
+          <div class="address-content">
+            <address>
+              <ul class="list">
+                <li>
+                  <a
+                    class="address link"
+                    href="https://goo.gl/maps/J4j9FRFDDXwHHrxk6"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li>
+                  <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                  <a class="contact link" href="tel:00380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
