--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </section>
 
       <!-- features section -->
-      <section class="section">
+      <section class="section features">
         <div class="container">
           <h2 class="visually-hidden section-title">Наші переваги</h2>
           <ul class="features-list list">
@@ -84,7 +84,7 @@
       </section>
 
       <!-- activity section -->
-      <section class="section">
+      <section class="section activity">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="activity-list list">
@@ -113,8 +113,10 @@
                 alt="Чоловік в окулярах з бородою"
                 width="270"
               />
-              <h3 class="title">Ігор Дем'яненко</h3>
-              <p class="list-text">Product Designer</p>
+              <div class="name-title">
+                <h3 class="title">Ігор Дем'яненко</h3>
+                <p class="list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -123,8 +125,10 @@
                 alt="Світловолоса жінка в окулярах"
                 width="270"
               />
-              <h3 class="title">Ольга Рєпіна</h3>
-              <p class="list-text">Frontend Developer</p>
+              <div class="name-title">
+                <h3 class="title">Ольга Рєпіна</h3>
+                <p class="list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -133,8 +137,10 @@
                 alt="Усміхнений чоловік в сорочці"
                 width="270"
               />
-              <h3 class="title">Микола Тарасов</h3>
-              <p class="list-text">Marketing</p>
+              <div class="name-title">
+                <h3 class="title">Микола Тарасов</h3>
+                <p class="list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -143,8 +149,10 @@
                 alt="Чоловік в окулярах"
                 width="270"
               />
-              <h3 class="title">Михайло Єрмаков</h3>
-              <p class="list-text">UI Designer</p>
+              <div class="name-title">
+                <h3 class="title">Михайло Єрмаков</h3>
+                <p class="list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -156,12 +164,14 @@
       <div class="container">
         <div class="footer-container">
           <div class="logo-footer">
-            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <a class="logo footer link" href="./index.html"
+              ><span class="logo-web">Web</span>Studio</a
+            >
           </div>
           <div class="address-content">
             <address>
               <ul class="list">
-                <li>
+                <li class="address-line">
                   <a
                     class="address link"
                     href="https://goo.gl/maps/J4j9FRFDDXwHHrxk6"
@@ -170,10 +180,10 @@
                     >м. Київ, пр-т Лесі Українки, 26</a
                   >
                 </li>
-                <li>
+                <li class="address-line">
                   <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="address-line">
                   <a class="contact link" href="tel:00380961111111">+38 096 111 11 11</a>
                 </li>
               </ul>
