--- a/portfolio.html
+++ b/portfolio.html
@@ -16,25 +16,27 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container header-menu">
-        <!-- navigation menu -->
-        <nav class="nav-menu">
-          <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="item"><a class="link current" href="./index.html">Студія</a></li>
-            <li class="item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
-            <li class="item"><a class="link" href="#">Контакти</a></li>
+      <div class="container">
+        <div class="header-menu">
+          <!-- navigation menu -->
+          <nav class="nav-menu">
+            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <ul class="site-nav list">
+              <li class="item"><a class="link" href="./index.html">Студія</a></li>
+              <li class="item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+              <li class="item"><a class="link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <!-- header contacts -->
+          <ul class="head-contact list">
+            <li class="item">
+              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a class="link" href="tel:00380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
-        </nav>
-        <!-- header contacts -->
-        <ul class="head-contact list">
-          <li class="item">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a class="link" href="tel:00380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -69,8 +71,10 @@
                     alt="Сторінка Технокряк на макбук"
                     width="370"
                   />
-                  <h2 class="title">Технокряк</h2>
-                  <h3 class="category">Вебсайт</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Технокряк</h2>
+                    <p class="category">Вебсайт</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -81,8 +85,10 @@
                     alt="Постер баскетбол Нью Орлеан та Голден Стар"
                     width="370"
                   />
-                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                  <h3 class="category">Дизайн</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="category">Дизайн</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -93,8 +99,10 @@
                     alt="Сіфуд ресторан лого"
                     width="370"
                   />
-                  <h2 class="title">Ресторан Seafood</h2>
-                  <h3 class="category">Додаток</h3>
+                  <div class="cards text">
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="category">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -105,8 +113,10 @@
                     alt="Навушники"
                     width="370"
                   />
-                  <h2 class="title">Проєкт Prime</h2>
-                  <h3 class="category">Маркетинг</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Проєкт Prime</h2>
+                    <p class="category">Маркетинг</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -117,8 +127,10 @@
                     alt="Дві коробки"
                     width="370"
                   />
-                  <h2 class="title">Проєкт Boxes</h2>
-                  <h3 class="category">Додаток</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Проєкт Boxes</h2>
+                    <p class="category">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -129,8 +141,10 @@
                     alt="Сторінка Інспірейшн на моніторі"
                     width="370"
                   />
-                  <h2 class="title">Inspiration has no Borders</h2>
-                  <h3 class="category">Веб-сайт</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="category">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -141,8 +155,10 @@
                     alt="Відкритий журнал моди"
                     width="370"
                   />
-                  <h2 class="title">Видання Limited Edition</h2>
-                  <h3 class="category">Дизайн</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Видання Limited Edition</h2>
+                    <p class="category">Дизайн</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -153,8 +169,10 @@
                     alt="Лєйбла"
                     width="370"
                   />
-                  <h2 class="title">Проєкт LAB</h2>
-                  <h3 class="category">Маркетинг</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Проєкт LAB</h2>
+                    <p class="category">Маркетинг</p>
+                  </div>
                 </a>
               </li>
               <li class="cards">
@@ -165,8 +183,10 @@
                     alt="Робота на ноутбукі"
                     width="370"
                   />
-                  <h2 class="title">Growing Business</h2>
-                  <h3 class="category">Додаток</h3>
+                  <div class="cards-text">
+                    <h2 class="title">Growing Business</h2>
+                    <p class="category">Додаток</p>
+                  </div>
                 </a>
               </li>
             </ul>
@@ -180,12 +200,14 @@
       <div class="container">
         <div class="footer-container">
           <div class="logo-footer">
-            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <a class="logo footer link" href="./index.html"
+              ><span class="logo-web">Web</span>Studio</a
+            >
           </div>
           <div class="address-content">
             <address>
               <ul class="list">
-                <li>
+                <li class="address-line">
                   <a
                     class="address link"
                     href="https://goo.gl/maps/J4j9FRFDDXwHHrxk6"
@@ -194,10 +216,10 @@
                     >м. Київ, пр-т Лесі Українки, 26</a
                   >
                 </li>
-                <li>
+                <li class="address-line">
                   <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="address-line">
                   <a class="contact link" href="tel:00380961111111">+38 096 111 11 11</a>
                 </li>
               </ul>
