--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
                     alt="Сіфуд ресторан лого"
                     width="370"
                   />
-                  <div class="cards text">
+                  <div class="cards-text">
                     <h2 class="title">Ресторан Seafood</h2>
                     <p class="category">Додаток</p>
                   </div>
